Working on squashing compatibility bugs

--- a/styles.css
+++ b/styles.css
@@ -17,16 +17,17 @@ body, p, li{
 }
 
 #controls a {
-  position: fixed; 
-  margin-top: 550px;
+  position:fixed; 
+  margin-top: 22rem;
   left: -7rem; 
   transition: 0.3s; 
   padding: 1rem; 
   width: 12rem; 
   text-decoration: none; 
-  font-size: 20px; 
+  font-size: 1rem; 
   color: white; 
-  border-radius: 0 5px 5px 0; 
+  border-radius: 0 5px 5px 0;
+  display:grid; 
 }
 
 
@@ -38,6 +39,7 @@ body, p, li{
 #all {
   top: 2rem;
   background-color: red;
+  grid-template-columns: '90rem 10rem';
 }
 
 #stats {
